src/css/main.css
body.aframe-inspector-opened,
.toggle-edit {
  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif;
}

.wf-roboto-n4-active body.aframe-inspector-opened,
.wf-roboto-n4-active .toggle-edit {
  font-family: Roboto, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif;
}

.Select,
code,
pre,
input,
textarea,
select {
  font-family: Consolas, Andale Mono, Monaco, Courier New, monospace;
}

.wf-robotomono-n4-active .Select,
.wf-robotomono-n4-active code,
.wf-robotomono-n4-active pre,
.wf-robotomono-n4-active input,
.wf-robotomono-n4-active textarea,
.wf-robotomono-n4-active select {
  font-family: Roboto Mono, Consolas, Andale Mono, Monaco, Courier New, monospace;
}

body.aframe-inspector-opened {
  color: #fff;
  font-size: 12px;
  margin: 0;
  overflow: hidden;
}

hr {
  border: 0;
  border-top: 1px solid #ccc;
}

a {
  cursor: pointer;
}

button {
  position: relative;
}

code {
  font-family: Consolas, Andale Mono, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
}

textarea {
  tab-size: 4;
  white-space: pre;
  word-wrap: normal;
}

textarea.success {
  border-color: #8b8 !important;
}

textarea.fail {
  background-color: rgba(255, 0, 0, 0.05);
  border-color: #f00 !important;
}

textarea,
input {
  outline: none; /* osx */
}

#left-sidebar,
#right-panels {
  z-index: 9998;
}

#sidebar,
#left-sidebar,
.panel {
  cursor: default;
  user-select: none;
}

.collapsible .static {
  margin: 0;
}

.collapsible .static .collapse-button {
  border: 6px solid transparent;
  float: left;
  height: 0;
  margin-right: 6px;
  width: 0;
}

.collapsible.collapsed .static .collapse-button {
  border-left-color: #1faaf2;
  margin-top: 2px;
}

.collapsible:not(.collapsed) .static .collapse-button {
  border-top-color: #1faaf2;
  margin-top: 6px;
}

.collapsible.collapsed .content {
  display: none;
}

.toggle-edit {
  background-color: #ed3160;
  color: #fff;
  font-size: 12px;
  left: 3px;
  margin: 0;
  padding: 6px 10px;
  position: fixed;
  text-align: center;
  text-decoration: none;
  top: 3px;
  width: 204px;
  z-index: 99999;
}

.toggle-edit:hover {
  background-color: rgb(228, 43, 90);
}

.scenegraph {
  border-top: 1px solid #111;
  padding-top: 32px;
}

.scenegraph .search {
  padding: 5px;
}

.scenegraph-toolbar {
  background-color: #333;
}

.scenegraph-actions {
  padding: 9px 0 5px;
}

.search {
  color: #aaa;
  font-size: 16px;
  position: relative;
}

.search input {
  background: #222;
  border-radius: 5px;
  height: 22px;
  text-indent: 10px;
  width: 216px;
}

.search .fa-search {
  position: absolute;
  right: 11px;
  top: 10px;
}

.search .fa-times {
  position: absolute;
  right: 32px;
  top: 10px;
}

input {
  background-color: transparent;
  border: 1px solid #555;
  color: #fff;
}

input,
.texture canvas {
  transition: 0.1s background-color ease-in-out, 0.1s border-color ease-in-out, 0.1s color ease-in-out;
}

input[type=text],
input[type=number],
input.string,
input.number {
  min-height: 14px;
  outline: none;
}

input.number {
  background-color: transparent !important;
  border: 0;
  color: #20b1fb !important;
  cursor: col-resize;
  font-size: 12px;
  padding: 2px;
}

input.string:focus,
input.number:focus {
  border: 1px solid #20b1fb;
  color: #fff;
  cursor: auto;
}

input.error {
  border: 1px solid #a00;
}

#left-sidebar {
  background: #2b2b2b;
  bottom: 0;
  display: flex;
  flex-direction: column;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 230px;
}

#sidebar {
  background: #2b2b2b;
  width: 331px;
}

#sidebar * {
  vertical-align: middle;
}

input,
textarea,
select {
  background: #222;
  border: 1px solid transparent;
  color: #888;
}

.row {
  margin-bottom: 10px;
  min-height: 20px;
}

input[type=color] {
  background-color: #333;
  border: 1px solid #111;
  cursor: pointer;
}

.texture canvas {
  border: 1px solid #222;
  cursor: pointer;
}

.texture canvas:hover {
  border-color: #1faaf2;
}

input[type=color] {
  cursor: pointer;
  height: 16px;
  padding: 0;
  width: 64px;
}

/* Note: these vendor-prefixed selectors cannot be grouped! */
input[type=color]::-webkit-color-swatch {
  border: 0;  /* To remove the gray border. */
}

input[type=color]::-webkit-color-swatch-wrapper {
  padding: 0;  /* To remove the inner padding. */
}

input[type=color]::-moz-color-swatch {
  border: 0;
}

input[type=color]::-moz-focus-inner {
  border: 0;  /* To remove the inner border (specific to Firefox). */
  padding: 0;
}

.components {
  background-color: #323232;
  color: #bcbcbc;
  height: 100%;
  overflow: auto;
  position: fixed;
  width: 331px;
}

div.vec2,
div.vec3,
div.vec4 {
  display: inline;
}

.vec2 input.number,
.vec3 input.number {
  width: 46px;
}

.vec4 input.number {
  width: 34px;
}

.collapsible-header {
  display: flex;
  justify-content: space-between;
}

.component-title span {
  float: left;
  max-width: 110px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
}

.collapsible .static {
  background-color: #323232;
  border-bottom: 1px solid #262626;
  border-top: 1px solid #262626;
  color: #fff;
  height: 16px;
  padding: 10px;
  vertical-align: middle;
}

.collapsible .menu {
  text-align: right;
}

.collapsible .menu::after {
  color: #bbb;
  content: '\2807';
  font-size: 12px;
  padding: 5px;
  text-align: right;
}

.collapsible .static .collapse-button {
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  float: left;
  height: 0;
  margin-right: 10px;
  margin-top: 2px;
  width: 0;
}

.collapsible.collapsed .static .collapse-button {
  border-left-color: #bbb;
}

.collapsible:not(.collapsed) .static .collapse-button {
  border-top-color: #bbb;
}

.collapsible .content {
  background-color: #2b2b2b;
  padding: 10px;
}

.components .row {
  margin-bottom: 10px;
  min-height: 20px;
}

.components * {
  vertical-align: middle;
}
/* ... */

